[gd_scene load_steps=6 format=3 uid="uid://bwfgb705bolse"]

[ext_resource type="Script" uid="uid://cju58a7jgv13t" path="res://scripts/EnhancedMain.gd" id="1"]
[ext_resource type="Script" uid="uid://iv8s6fgcffao" path="res://scripts/core/QuantumConductor.gd" id="2"]
[ext_resource type="Script" uid="uid://f1ngbhygcwv3" path="res://scripts/ui/QuantumVisualization.gd" id="3"]
[ext_resource type="Script" uid="uid://rl5n8plgyecv" path="res://scripts/ui/RTSInterface.gd" id="4"]
[ext_resource type="Script" uid="uid://diyvwm4t7jja1" path="res://scripts/ui/IconSwitcher.gd" id="4_4bjjn"]

[node name="EnhancedMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 60.0
grow_horizontal = 2
text = "ðŸŒŒ QUANTUM SINGULARITY RTS ðŸŒŒ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 90.0
grow_horizontal = 2
text = "Mathematical Reality Command Interface"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantumConductor" type="Node" parent="."]
script = ExtResource("2")
debug_mode = true

[node name="QuantumVisualization" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="IconSwitcher" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_4bjjn")

[node name="CurrentIconDisplay" type="VBoxContainer" parent="IconSwitcher"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 400.0
offset_bottom = -20.0
grow_vertical = 0

[node name="IconName" type="Label" parent="IconSwitcher/CurrentIconDisplay"]
layout_mode = 2
text = "ðŸ”¹ Loading Icon..."

[node name="IconDescription" type="Label" parent="IconSwitcher/CurrentIconDisplay"]
layout_mode = 2
text = "Initializing mathematical system..."
autowrap_mode = 3

[node name="DimensionLabel" type="Label" parent="IconSwitcher/CurrentIconDisplay"]
layout_mode = 2
text = "Dimensions: 0"

[node name="IconPanel" type="Panel" parent="IconSwitcher"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="IconSwitcher/IconPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconList" type="VBoxContainer" parent="IconSwitcher/IconPanel/ScrollContainer"]
layout_mode = 2

[node name="RTSInterface" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Controls" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="TimeLabel" type="Label" parent="UI/Controls"]
layout_mode = 2
text = "Time Scale: 1.0"
horizontal_alignment = 1

[node name="TimeSlider" type="HSlider" parent="UI/Controls"]
layout_mode = 2
max_value = 3.0
step = 0.1
value = 1.0

[node name="PauseButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Pause Evolution"

[node name="ResetButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Reset System"

[node name="StatusLabel" type="Label" parent="UI/Controls"]
layout_mode = 2
text = "Status: Initializing..."
autowrap_mode = 3

[node name="MathematicalInfo" type="Label" parent="UI/Controls"]
layout_mode = 2
text = "Mathematical info loading..."
autowrap_mode = 3

[node name="DebugPanel" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -250.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="DebugLabel" type="Label" parent="UI/DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Debug Info Loading..."
autowrap_mode = 3

[node name="InstructionPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 200.0
offset_right = -20.0
offset_bottom = 400.0
grow_horizontal = 0
grow_vertical = 2
